@@ -1,32 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST pylibmc-1.2.3.tar.gz 47355 SHA256 0157c72ce8b6aeefe52c77be5e1d059481b58127e0f9d2d6c216f6b1c68da6dc SHA512 9eaf0c5879e52d786b14b5939fa846082c095059439dfa23cac73b74a00cde14bd3497492bf6f5b3d1a6bad79b216fb869d2d10064c8182a67baf82c58622cea WHIRLPOOL eafa066f3a14e54575e6d7300fdd5376cd3fa2317fc632a53269417b397319f70002afbe99ece401af7f75e0888ab44ffbb1ddbe0ec94d8d2b42e9fb0f78810c
-DIST pylibmc-1.3.0.tar.gz 49949 SHA256 a6945a4c77f96d5b744118805247fb24c09f1d353aebbce6dd510a6042689b45 SHA512 f8c729b9042ba130fa9aabb00643e94c4372a0477e9f4a90207b6b5389b14d280a81d33bd50c9aa59981d2cf4242c6eff651ead308e087e665711915fbb2b4c0 WHIRLPOOL 0647f6ebbcc28be62f619fb0b0aefeadf045acda880d713a8a7e1ccd6e451a94e5e6cf827fe73a88c2fe457b916995bf2b61c9d267557613ec66521c5d308d24
 DIST pylibmc-1.4.1.tar.gz 53360 SHA256 a00e75f5c76e573e95ac5b29cb8a816728930f29332c49c74dbfd326d598088f SHA512 9bc054139983afaa83921d89021cf5d97313751b5b68da8bf38be5015f7f02c4ecd9d6a551be141d6994e51f6a636a4cd678c59552ea94989038637413959ea8 WHIRLPOOL 46314b3fcfcf36a8ee699b05baaebbdd1952cd8517fc9150d1f6be391c577b91afde4ad1a83d2e3371263b0bd5c303a5ae4fd4d1531423c83685d8ab11a14a8c
 DIST pylibmc-1.4.2.tar.gz 53496 SHA256 30e19a06e650fde31f40a62db0a3da37a1cad9616e1cfd04b8e248fb4bd5f4a1 SHA512 0ea5c3681356bc54ca894825817ef644531996988c50a288fb84e300ae843cb4725bc32677e20b8bc358071262c8b6be775dca070091baef8f34a8a160a3e217 WHIRLPOOL e1e81e720a493340119af4310bfbb9cdffa951b3d997b9c47e257fd630c6a8ca719fa4ae25dba3bf7e736d7fbf84174a7a5572f0734c0bfd7732224478fa923a
-EBUILD pylibmc-1.2.3.ebuild 1079 SHA256 9741982f2de1b9b4dc6ee02b85c1a38c3d325342357ab2db9873e52efe3cac6e SHA512 50d558887c49cc101b7f447728fabbdddb6c92f0413614c9de85ecb0bfefa197d08d95d77efe21c78f294614b2b6eb7d6b0728fd78772ae14249c92776e15233 WHIRLPOOL 1685daba4e07c0ce8e6317f72faace2f45eda681b79b55bcd969caee965099816f6398b6a716be0176ffe97d0b57a75272183e2341937304deebd787a45505db
-EBUILD pylibmc-1.3.0.ebuild 1079 SHA256 d077e37c0998ab463741cdf2fe13cade1331039a48ccb4ab484f603825b870c3 SHA512 ae6387baba6ebfafadd0522389e74da932fd127f4db7725c7bfd76f9dbc182472d57e4b5b5de1dfea1b08377c79955b3b8e682ebc154f40ad81fdecb3b7d7d49 WHIRLPOOL fa71eeba26a0cce57d4e5773f292d38d88d373521848f46ea6aef01a9810c7aea472cade36d36508a3818d23f804eff2e97d9aea2fffb8edc8f3791d159641de
 EBUILD pylibmc-1.4.1.ebuild 1090 SHA256 c02189abdd54d2f4d9adf1029a063a18293824891679ec0481f91df97a172660 SHA512 ce03bc5fb13736b0e32099df34206dd08e1125065096ca47fb680a06340ec27f4f269163ea2ae7b15fb3668ec5b89d15e5c121bbf4a5fda73562ef58bd140a6f WHIRLPOOL be9ac1ea2bfae5ab56c2657eda8ad4321b25dafb9e717e5401dc9c9f8d6c5bb27cd881fc36517b7285815a22259e70f33c799c2da11f0f893e6787a36f6e5166
 EBUILD pylibmc-1.4.2.ebuild 920 SHA256 c1a37943f7a76a6c3e4ae3e365e30724fe1594202adf595f9564cbfa7a0b1820 SHA512 6e95423589a06f74755e024ab3f0f00a13019fb259e09dc759838d3952e8c1db3269f60997aa99079b5ee22a54c71fea10d9a60c80e7bfb4abae46136ea7b940 WHIRLPOOL 85fcfef0a4d18756c64594ad32ad6744d36e03548e5ed40dde529306da8d65755b321a5d86518e070536ad2688fe402400b98e6bfe9275cde8484e0e9f230883
-MISC ChangeLog 1945 SHA256 ef51b1d86264b9d61716219e3438ade1f1b1960cf69d7c8ed46684f002daf0e5 SHA512 533dbd8c0ceb0221edde2a77f9220b9e39e84c63a27a01f1177e178f025d5de40a132aa0aa56e75043b2d2b619dcfe091c66936774b19e6e745d9b634908ef4d WHIRLPOOL a728c781a1e958289280445efe65eef843c1cd8afcad95b0f95bb766a3a3abfece7cf11eb42136e0870bb26c863214b265a0b28a18fd731c54501fd4ae5a888a
+MISC ChangeLog 2052 SHA256 92a2acf48c7f0ebf108205debb8f7bb78355fa034d9cc98d5e07e6f433bdc8ce SHA512 ad17df30f307fea28ad72bcdc7b80878df07ef445985cb38aa8993e05344e6268cc9c584e2bd36e6142647d376845a90cc215e383bfbfaa9cc9a03575b7e2d31 WHIRLPOOL 8696884d79fdd3fe348162b44eec194cd8d7c85ed25573761ac4dad1123781329168e0a7078dece823c6afdbf8b49478b1fd47681090375144c317e30dfef2b1
 MISC metadata.xml 510 SHA256 f2edf982d7d18540ad993a3fd2e3d7a587611ea0ea5d6bad9af9a3e83bc118fa SHA512 e230aa0538896381b63b7444de1d87a52d99c0bdde595fb6632813fbb8506bbf48867ca3e3d1f95ba9308e0d29ca6b3b82ab284546065a52388520c7dfa910c6 WHIRLPOOL 6043c1b4cc4c982eb4d61ac241dd30cc27f25342fabed8a2d1207e98844f370b8ab116b591636a5fe0a1d67f613ad067fa74ab10c54f8756678b92ffa71ee2eb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQJ8BAEBCABmBQJVN6RPXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOoOcQAIKQKgOuWRb+A86FtWOOJKBB
-LIzIZGTGo5WZnfwMYwaLWLOwhZUg1GSH1iEcTN3x8oWKEDtIDU8Rg2pBMoHAsAN6
-SHyOHuRniQCi7P+6Yg4BINZUQ3a7FsBNY93K3W9C59VeV8EmlPhRxG12pgmDn7aD
-mBn//QVQYGf0wHgs4Zk0khT1/IAqwhGEMNOq8nK6J2i4FAzLZLKDWXgq2RUYMhTN
-pWkH1SLHXlRxQIvW/OKU71B8rbSYfrL8lpqEHlRN51ONzBupEh/o1Wzzza9BPZqz
-iU4daJR2fPk7KX6/9fD7xtAJy1fjxdXP6omB866UQcZuxMGfv2pRcmxKsED9uA2g
-yUJBACZkX7GLs2zz2I74TG8Wo7NfXmG1SbTQ91d+wzGG5AqNdiG68HzQSHcz4xz6
-xoKtebd5Ag0kOPVjZY7HE9DdD2YMbvAGLO+oJWuiGbO52zILsd1ILKrOSiNBFWjC
-EOxJ0AM15amJSbJi9m5UNtvmDn7dYJVeVJiaIyUWycVOnUMnlSmlpykPz8E4yywa
-tEvt6XGseqqu6OOoj9lMLbSwbzhzLydZC3dB2v5N1rDhW5Zmo5dzYCHIUA+cKm65
-okhqATIsoKXM7ojx8QWCT9RUeJb+ea1AqB4JjcKUEIouRlQd7XU9yg6XMCZIARlS
-HGyRFLY6KBxlnGA3z1ne
-=+Riv
+iEYEAREIAAYFAlU4tXAACgkQso7CE7gHKw3OvgCglVVJ1ztJFZTLuSfmb34feo6F
+hR0AnA1cx692cc8giU7pjC0LOIA8udcF
+=z7B+
 -----END PGP SIGNATURE-----
