@@ -5,13 +5,15 @@ DIST pv-1.5.7.tar.bz2 105480 SHA256 c8535061bb703086b67fa540da162ad48d6ecd219ae7
 DIST pv-1.6.0.tar.bz2 107723 SHA256 0ece824e0da27b384d11d1de371f20cafac465e038041adab57fcf4b5036ef8d SHA512 bd405901812ca50b910adbcf1d2c540dc0b8612f03687866734a79cfa5b5b8100024c18a1d1413c6613e1f2085989cbb77907da89bec7eda37cdeaa7597129d5 WHIRLPOOL 51312339fa1815a61f58fa0f49b0538289d0308b17c5d03c4c6a7e371052e9911d09cb7a9c1eb032b797a3f56eaa7e5dbfecaf6fb2c1faf3fd1b34c298782c1f
 EBUILD pv-1.5.7.ebuild 1276 SHA256 90f71aa0943344e3a7acfcbf87bc8654754d2a498198e1424bdba81ef436d0aa SHA512 89a25b3fb0a08c1a9741aa1ac4ad5ee358477ce3bcd4d64748183c81d7ebc8dc56b1e3087ffe44a7e2cc66b5a86534240eeb5b2ccc39b7ebc9d18ccc1fc68d2e WHIRLPOOL 17d815cf909762af58aedbf19ecc9300b3754b7497a89589f68b74fc0dfadad210426f6450992e8c25813733ea46fede14d75be5d5b056a4c57ee43249b30f7e
 EBUILD pv-1.6.0-r1.ebuild 1495 SHA256 c2e54da90d98a6e26f3d362f0f8cbdf5794e0b65d4b77e1cf1df5ce33ed9950a SHA512 65587918c5e54654f19add84b6988873775861a3beeeef577af2b53b65bbc0e54b8ccba3bc47435643018035287e8f0fbb0e3ab5130a7cf9d116504c42b8c4cb WHIRLPOOL 335f94dc0dcbb9531eaf50084444f24590774fa6a316afe1a1b67ba931b91f4187e8148f1a1928a683c5ed16f699e83cae45e80e0e86f1c9a5066f57f3875835
-EBUILD pv-1.6.0.ebuild 1282 SHA256 9f32cc0e5c215ddeac52007648d809e7eaf694c4244aaa0ab4f0b5d40e637384 SHA512 dfb825cff08af637b77354ec02389010b1251666ad6a4df9761bef2ea291e0020471423813226cdab0d842294a4b5e7c7e411d7084165c63aa5cacd3450e7de7 WHIRLPOOL 7a612a0c677b2ca10c29864925ea64ea1bfc623702eff28977b5b2c47ab5c8766d293c095cba6d929a3a093a705f9fa6e0f0f159d0fd7fdaedbea9a568227259
-MISC ChangeLog 15469 SHA256 d6ac6800b2fe3dc6f7c974834a6c62eb70ea2dd03e5541649eeb6a3c27ee5e6e SHA512 2ba050300648c5eff555acfcf3d3d889ba38925f4971d61be1b40cbd68d6f91c086b0c22dfc5ed9d8c3a4ce199903a4fb16f2f6142ad24f6a51abb9906058d9c WHIRLPOOL 4fed6bb747fd8e8b60d015547b98e479301e2cddbb99b8c43dc18ce61cb6add0dda2aa6daf07b51a88366e49bcd8d59dd0b18b02194eed84f700bb6075017f0a
+EBUILD pv-1.6.0.ebuild 1283 SHA256 d5a91801a93cd54fa7c43718ad8ffdc1cb7c0fb8cbc4d74689a192058b853a7e SHA512 59b3da9c952fc4d3500fd1b097cae5db37feb612248f28cb6a2861390149f1a7d7711614875e2b4cbdaf32076a7954f5232f233998c06bada640c41e64f5cc1e WHIRLPOOL e1e771b1d74ee3cd3f3d6ba54bd40763a723549a4febdf02dbde33e50d54e904aed3cd4c5607cee42ccfa63e648a0026304791eca071fb4de9767b3833a1a270
+MISC ChangeLog 15570 SHA256 a469fdb7e5b27c71f35500d327c49999b741d8ec2999fda0887d2d80c836add7 SHA512 b286ea4093582f9dbdb74252ff243e261d99243d77ac1072eea456b369c9548f04fd8534ffd62c225a584e2d2415087b030d635110eb8c56afbf1a30ceba9b1a WHIRLPOOL eb7d8be8b8edc1506938526cd718789b117ecc220e49ec32398d03512e4658b9f91868b5080fe2c3be3507ff9fc6fe2b1555b5b33510bd65652c58d3b2f0e849
 MISC metadata.xml 320 SHA256 d30479b98e223f17fe93dff80af5b5c8869619c5f055930a2caf379ea4191cb0 SHA512 b55a70843c649c4f8e5738d2c05c4e79cf455e94cb34891a8df5aed89278f45297c40cbffdf81a5b2aaef9fca9da281f41dcfe416d51a4f5fec182e87527da18 WHIRLPOOL 84be3b621427009a36e235e4a6a065a9ea359f68d1f7ffba1636d958eaca30f8424f67f07866ca90718e0643607df7b3a886b9b07ae3c1a80ade113ea403ca0b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlU2og8ACgkQCaWpQKGI+9QS7ACeME3aicbuTH+P6YUbsi72tsfs
-s0MAnAjnAZIkbik+hKrLqIrZeFAk/Wmd
-=bDiR
+iJwEAQEIAAYFAlU4upAACgkQG9wOWsQutda/+gQAh0x36a2zfmKSCXT9XO1ux6AF
+IX1vR/2BzhHGXkhSvCvNiM3RJZN3Fm1A5K+qh/R+2VQdfscABxDx72gjcolbBurA
+2Sin4dsGddw2sqYNwCd8ISGb/LjRCfJ0DbWTmfpamMgd/i9gWnEkux5Xklcr0sss
+VuL2cilHJ//6kYTSpFw=
+=FkjW
 -----END PGP SIGNATURE-----
