@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/pylibmc
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pylibmc/ChangeLog,v 1.13 2015/04/22 13:38:21 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pylibmc/ChangeLog,v 1.14 2015/04/23 09:03:32 idella4 Exp $
+
+  23 Apr 2015; Ian Delaney <idella4@gentoo.org> -pylibmc-1.2.3.ebuild,
+  -pylibmc-1.3.0.ebuild:
+  rm old
 
 *pylibmc-1.4.2 (22 Apr 2015)
 
